Lower the baseline to Java 17 and make redaction controls real